[package]
name = "rusty-rat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
telegram-bot = "0.8"
futures = "0.3"
reqwest = "0.10"
scraper = "0.12"
lazy_static = "1.4"
regex = "1"
diesel = { version = "1.4", features = ["sqlite"] }
