[package]
name = "rusty-rat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", rev = "65ad5cf" }
futures = "0.3"
reqwest = "0.11"
scraper = "0.12"
lazy_static = "1.4"
regex = "1"
diesel = { version = "1.4", features = ["sqlite"] }
